# MCP_base_repo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCP.bat  MCP.sh  README.md  SECURITY.md  START_HERE.bat  START_HERE.sh  prompt_pack.md  setup-security.sh
.claude/: README.md  settings.json  settings.local.json  settings.local.json.example
.claude/hooks/: auto-build-test.js  brainstorm.js  check-registry.js  ensure-docs.js  manual-build-guide.js  test-hook.js  validate-env.js  validate-server-structure.js
.claude/hooks/prompts/: process.md  x-persona.md
.claude/hooks/state/: .gitkeep
.claude/hooks/utils/: common.js
.githooks/: README.md  pre-commit
.github/hooks/: pre-commit
Reference/: hooks_and_settings.md  prompt_pack.md
Reference/Knowledge/: Reference_links.txt  mcp_intro_and_base_knowledge.md  mcp_practical_server_guide.md
Reference/pg_tools/: pyproject.toml
Reference/pg_tools/src/: __init__.py
Reference/pg_tools/src/mcp_server_pg/: server.py
mcp-hub/: .env.example  .gitignore  CLAUDE.md  MONOREPO_GUIDE.md  README.md  TEST_DEBUG.bat  package.json  pnpm-lock.yaml  start_here.bat  start_here.sh
mcp-hub/hub/: auth-middleware.js  cli.js  manager.js  monitor.js  process-manager.js  registry.json  setup.js
mcp-hub/hub/utils/: env-manager.js
mcp-hub/servers/everything/: package.json  tsconfig.json
mcp-hub/servers/pg_tools/: README.md  pyproject.toml  test_connection.py  test_mcp.py
mcp-hub/servers/pg_tools/src/mcp_client/: __init__.py
mcp-hub/servers/pg_tools/src/mcp_server_pg/: __init__.py  http_server.py
(+4 files in other folders)
