[project]
name = "mcp-server-pg"
version = "0.1.0"
description = "MCP Server for PostgreSQL database operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "asyncpg",
    "python-dotenv",
]

[project.scripts]
mcp-server-pg = "mcp_server_pg.server:wrapper.run"
