[project]
name = "mcp-server-pg"
version = "0.2.0"
description = "MCP Server for PostgreSQL database operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv",
    "aiohttp>=3.9.0",
    "aiohttp-sse>=2.2.0",
    "aiohttp-cors>=0.7.0",
]

[project.scripts]
mcp-server-pg = "mcp_server_pg.server:wrapper.run"
