[project]
name = "mcp-server-pg"
version = "0.2.0"
description = "MCP Server for PostgreSQL database operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv",
]

[project.scripts]
mcp-server-pg = "mcp_server_pg.server:wrapper.run"
